Remove CIIRC, change     "Branch of study" to "Specialisation"

--- a/src/title.tex
+++ b/src/title.tex
@@ -5,8 +5,7 @@
 
     \textsc{\Large Czech Technical University in Prague}\\[1em]
     \textsc{\large Faculty of Electrical Engineering\\
-    \Department\\
-    Czech Institute of Informatics, Robotics and Cybernetics\\[3em]
+    \Department\\[3em]
     }
     \includegraphics[height=4.1cm]{src/fig/pdfs/ctu_logo_blue.pdf}\\[3em]
 
@@ -19,7 +18,7 @@
     {\large \Location, \Date}\\[3em]
 
     Study programme: \Programme\\
-    Branch of study: \Field\\[4em]
+    Specialisation: \Field\\[4em]
 
     \textbf{Supervisor: \Supervisor}\\
 
