Change info about template author

--- a/presentation.tex
+++ b/presentation.tex
@@ -1,11 +1,6 @@
 %===============================================================
-% Template using official colors of Czech Technical University.
-% They are defined by new graphical manual - 2017.
-% Specially designed for Laboratory of Structure of Biomolecules
-% Share and modify as you like. Keep the name of the author.
-% It is forbidden to use the template commercially.
-% Author: Martin Malý.
-% Published: 23.9.2017.
+% Template author: Martin Malý.
+% Template URL: https://www.overleaf.com/latex/templates/czech-technical-university-colors-beamer-template-lab-of-structure-of-biomolecules/xmgmzfhtyrxt
 %===============================================================
 
 \documentclass{beamer}
