Change definition of author

--- a/presentation.tex
+++ b/presentation.tex
@@ -53,12 +53,10 @@
 %====================================================
 %========== DEFINITION OF AUTHORS ETC...=============
 %====================================================
-\author[Jan Novák]{Jan Novák$^{1,2}$, Petr Černý$^{2}$}
-\institute[affiliation]{$^{1}$ Institute \\  address \\
-\vspace{2mm}$^{2}$ Another institute \\  address}
-\title[Title]{Long title}
-\subtitle{Subtitle}
-\date[Event]{Our event\\30.2.2017}
+\author[Yauheni Zviazdou]{Yauheni Zviazdou}
+\institute[CTU FEE]{Czech Technical University in Prague \\ Faculty of Electrical Engineering \\ Department of Cybernetics \\}
+\title[Text representation models. RAG.]{From FastText to Transformer Models, and their Application in Retrieval-Augmented Generation}
+\date[Bachelor's thesis presentation]{Bachelor's thesis presentation\\dd.mm.yyyy}
 
 %====================================================
 %========== BEGINNING OF DOCUMENT ===================
