presentation: change logos

--- a/presentation.tex
+++ b/presentation.tex
@@ -4,6 +4,7 @@
 %===============================================================
 
 \documentclass{beamer}
+% \documentclass[aspectratio=169]{beamer} % Uncomment for 16:9
 \usepackage[utf8]{inputenc}
 
 \usetheme{Madrid}
@@ -58,16 +59,12 @@
 \begin{frame}
 	\titlepage
 	\begin{center}
-  		\includegraphics[height=1.3cm]{files/symbol_cvut_plna_samostatna_verze.pdf}
-		\includegraphics[height=1.4cm]{files/FJFI_logo_indigo.pdf}
-		\includegraphics[height=1.3cm]{files/logo-lsb-cz.pdf}
-		\includegraphics[height=1.3cm]{files/IBT.png}
-		\includegraphics[height=1.3cm]{files/biocev-logo-CMYK-horizontal.pdf}
+  		\includegraphics[height=1.3cm]{src/fig/pdfs/ctu_logo_blue_filled.pdf}
 	\end{center}
 \end{frame}
 
 
-\logo{\includegraphics[height=1cm]{files/symbol_cvut_plna_samostatna_verze.pdf}}
+\logo{\includegraphics[height=1cm]{src/fig/pdfs/ctu_logo_blue_filled.pdf}}
 
 
 
