Change indentation to 2 spaces

--- a/presentation.tex
+++ b/presentation.tex
@@ -36,8 +36,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{lmodern} % pro pismo tucne a zaroven kurziva
-\usepackage{bm} % pro pismo tucne a zaroven kurziva
+\usepackage{lmodern} % for bold and italic at the same time
+\usepackage{bm} % for bold and italic at the same time
 \usepackage{epstopdf}
 \usepackage{changepage}
 \usepackage{array,booktabs}
@@ -57,10 +57,10 @@
 \begin{document}
 
 \begin{frame}
-	\titlepage
-	\begin{center}
-  		\includegraphics[height=1.3cm]{src/fig/pdfs/ctu_logo_blue_filled.pdf}
-	\end{center}
+  \titlepage
+  \begin{center}
+    \includegraphics[height=1.3cm]{src/fig/pdfs/ctu_logo_blue_filled.pdf}
+  \end{center}
 \end{frame}
 
 
@@ -69,10 +69,10 @@
 
 
 \begin{frame}
-	\frametitle{Slide}
+  \frametitle{Slide}
 \begin{itemize}
-	\item Text
-	\item \textbf{Text}
+  \item Text
+  \item \textbf{Text}
     \item \textcolor{cvut_navy}{Text}
     \item \textcolor{cvut_navy}{\textbf{Text}}
 \end{itemize}
@@ -83,26 +83,26 @@ Text text text text text text text text text text text text text text text text 
 
 
 \begin{frame}
-	\frametitle{Next slide}
-	\begin{columns}[onlytextwidth]
-		\begin{column}{0.5\textwidth}
-			\begin{itemize}
-				\item Text
-				\item \textbf{Text}
-    			\item \textcolor{cvut_navy}{Text}
-			    \item \textcolor{cvut_navy}{\textbf{Text}}
-			\end{itemize}
-		\end{column}
+  \frametitle{Next slide}
+  \begin{columns}[onlytextwidth]
+    \begin{column}{0.5\textwidth}
+      \begin{itemize}
+        \item Text
+        \item \textbf{Text}
+          \item \textcolor{cvut_navy}{Text}
+          \item \textcolor{cvut_navy}{\textbf{Text}}
+      \end{itemize}
+    \end{column}
 
- 	 	\begin{column}{0.5\textwidth}
-			 \begin{enumerate}
-				\item Text
-				\item \textbf{Text}
-    			\item \textcolor{cvut_navy}{Text}
-			    \item \textcolor{cvut_navy}{\textbf{Text}}
-			\end{enumerate}
-		\end{column}
-	\end{columns}
+      \begin{column}{0.5\textwidth}
+       \begin{enumerate}
+        \item Text
+        \item \textbf{Text}
+          \item \textcolor{cvut_navy}{Text}
+          \item \textcolor{cvut_navy}{\textbf{Text}}
+      \end{enumerate}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 
