tables: change "table*" to "table"

--- a/src/tables/RAG_evaluation.tex
+++ b/src/tables/RAG_evaluation.tex
@@ -1,4 +1,4 @@
-\begin{table*}[ht!]
+\begin{table}[ht!]
   \centering
   \begin{tabular}{lc|ccc}
     \toprule
@@ -13,5 +13,5 @@
   \end{tabular}
   \caption{\ac{RAG} evaluation with different parameters.}
   \label{tab:RAG_evaluation}
-\end{table*}
+\end{table}
   
