--- a/src/tables/RAG_time.tex
+++ b/src/tables/RAG_time.tex
@@ -1,4 +1,4 @@
-\begin{table*}[ht!]
+\begin{table}[ht!]
   \centering
   \begin{tabular}{lcccccc}
     \toprule
@@ -14,5 +14,5 @@
   \caption{Time required for \ac{RAG} to generate document part embeddings at various chunk sizes.
     Where $S_{chunk}$ represents the size of the chunk in characters and $t_n$ is a time of $n_{th}$ experiment.}
   \label{tab:RAG_time}
-\end{table*}
+\end{table}
   
