--- a/src/tables/models_detailed.tex
+++ b/src/tables/models_detailed.tex
@@ -1,4 +1,4 @@
-\begin{table*}[ht!]
+\begin{table}[ht!]
   \centering
   \begin{tabular}{lcccccccc}
     \toprule
@@ -48,5 +48,5 @@
   \end{tabular}
   \caption{Details on model sizes.}
   \label{tab:parameters}
-\end{table*}
+\end{table}
   
