--- a/src/tables/models_balanced.tex
+++ b/src/tables/models_balanced.tex
@@ -1,4 +1,4 @@
-\begin{table*}[ht!]
+\begin{table}[ht!]
   \centering
   \begin{tabular}{lcccccc}
     \toprule
@@ -17,5 +17,5 @@
     \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Question Match Accuracy for the diacritics (diacriticless) model.
     \textbf{\#params} is total number of parameters.}
   \label{tab:balanced}
-\end{table*}
+\end{table}
   
