presentation: remove abbreviations, add text_encode scheme

--- a/presentation.tex
+++ b/presentation.tex
@@ -97,17 +97,18 @@
 % Work objectives
 \begin{frame}
   \frametitle{Work objectives}
-  \textcolor{cvut_navy}{Task 1.} Compare text representation for QA\footnote{Question Answering}:
+  \textcolor{cvut_navy}{Task 1.} Compare text representation for QA:
   \begin{itemize}
     \item Review text representation methods.
     \item Compare traditional and transformer-based methods.
   \end{itemize}
-  \textcolor{cvut_navy}{Task 2.} RAG\footnote{Retrieval-Augmented Generation} Optimization
+  \textcolor{cvut_navy}{Task 2.} RAG Optimization
   \begin{itemize}
     \item Choose optimal models for RAG.
     \item Choose optimal chunk size and number of context chunks.
   \end{itemize}
-
+  \bigskip
+  \input{src/fig/tikz/text_encode.tex}
 \end{frame}
 
 % Text representation
