--- a/presentation.tex
+++ b/presentation.tex
@@ -169,6 +169,46 @@
 % Methodology
 \begin{frame}
   \frametitle{Methodology}
+  \begin{columns}[onlytextwidth,T]
+    \begin{column}{0.4\textwidth}
+      Text formatting
+      \begin{itemize}
+        \item Diacritics
+        \item Diacriticless
+      \end{itemize}
+      Baseline
+      \begin{itemize}
+        \item FastText (diacritics, diacrticless)
+        \item Architecture: CBOW
+        \item Dimensionality: 300
+      \end{itemize}
+      Benchmark
+      \begin{itemize}
+        \item UPV
+      \end{itemize}
+      Chosen models
+      \begin{itemize}
+        \item 15 groups
+        \item 37 models
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.75\textwidth}
+      RAG Components
+      \begin{itemize}
+        \item Embedding model: GTE\textsubscript{Small}
+        \item Chunks: 256, 512, 1024, 2048, 4096
+        \item Same context size
+        \item Answers generation: GPT-3.5-turbo
+        \item Answers quality measurement: GPT-4o
+      \end{itemize}
+      \begin{figure}
+        \raggedright
+        \includegraphics[scale=0.6]{src/fig/pdfs/tikz/diacritics_diacriticless.pdf}
+      \end{figure}     
+    \end{column}
+  \end{columns}
+    
+  
 \end{frame}
 
 % Balanced models
@@ -185,30 +225,6 @@
 \begin{frame}
   \frametitle{Thanks}
 \end{frame}
-
-\begin{frame}
-  \frametitle{Next slide}
-  \begin{columns}[onlytextwidth]
-    \begin{column}{0.5\textwidth}
-      \begin{itemize}
-        \item Text
-        \item \textbf{Text}
-          \item \textcolor{cvut_navy}{Text}
-          \item \textcolor{cvut_navy}{\textbf{Text}}
-      \end{itemize}
-    \end{column}
-
-      \begin{column}{0.5\textwidth}
-       \begin{enumerate}
-        \item Text
-        \item \textbf{Text}
-          \item \textcolor{cvut_navy}{Text}
-          \item \textcolor{cvut_navy}{\textbf{Text}}
-      \end{enumerate}
-    \end{column}
-  \end{columns}
-\end{frame}
-
 
 \end{document}
 % =============================================================
