presentation: change Itemize headers

--- a/presentation.tex
+++ b/presentation.tex
@@ -103,12 +103,12 @@
 % Work objectives
 \begin{frame}
   \frametitle{Work objectives}
-  \textcolor{cvut_navy}{Task 1.} Compare text representation for QA:
+  \textcolor{cvut_navy}{\textbf{Task 1.}} Compare text representation for QA:
   \begin{itemize}
     \item Review text representation methods.
     \item Compare traditional and transformer-based methods.
   \end{itemize}
-  \textcolor{cvut_navy}{Task 2.} RAG Optimization
+  \textcolor{cvut_navy}{\textbf{Task 2.}} RAG Optimization
   \begin{itemize}
     \item Choose optimal models for RAG.
     \item Choose optimal chunk size and number of context chunks.
@@ -155,7 +155,7 @@
     \end{column}
 
       \begin{column}{0.75\textwidth}
-        Factors:  
+        \textcolor{cvut_navy}{\textbf{Factors}}
         \begin{enumerate}
           \item Embedding \\model
           \item Chunk size
@@ -171,29 +171,29 @@
   \frametitle{Methodology}
   \begin{columns}[onlytextwidth,T]
     \begin{column}{0.4\textwidth}
-      Text formatting
+      \textcolor{cvut_navy}{\textbf{Text formatting}}
       \begin{itemize}
         \item Diacritics
         \item Diacriticless
       \end{itemize}
-      Baseline
+      \textcolor{cvut_navy}{\textbf{Baseline}}
       \begin{itemize}
         \item FastText (diacritics, diacrticless)
         \item Architecture: CBOW
         \item Dimensionality: 300
       \end{itemize}
-      Benchmark
+      \textcolor{cvut_navy}{\textbf{Benchmark}}
       \begin{itemize}
         \item UPV
       \end{itemize}
-      Chosen models
+      \textcolor{cvut_navy}{\textbf{Chosen models}}
       \begin{itemize}
         \item 15 groups
         \item 37 models
       \end{itemize}
     \end{column}
     \begin{column}{0.75\textwidth}
-      RAG Components
+      \textcolor{cvut_navy}{\textbf{RAG Components}}
       \begin{itemize}
         \item Embedding model: GTE\textsubscript{Small}
         \item Chunks: 256, 512, 1024, 2048, 4096
