Fix wrong QMA and AMA abbreviation in tables: evaluation, models_balanced

--- a/src/tables/evaluation.tex
+++ b/src/tables/evaluation.tex
@@ -58,8 +58,8 @@
   \end{tabular}
   \caption{\textbf{Evaliation of models.}
     We show evaluation results where:
-    \textbf{QMA}\textsubscript{d} (\textbf{QMA}\textsubscript{dl}) are Question Match Accuracy for the diacritics (diacriticless) model.
-    \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Question Match Accuracy for the diacritics (diacriticless) model.
+    \textbf{QMA}\textsubscript{d} (\textbf{QMA}\textsubscript{dl}) are Question Matching Accuracy for the diacritics (diacriticless) model.
+    \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Answer Matching Accuracy for the diacritics (diacriticless) model.
     \textbf{\#params} is total number of parameters.}
   \label{tab:evaluatinon}
 \end{table}
