--- a/src/tables/models_balanced.tex
+++ b/src/tables/models_balanced.tex
@@ -13,8 +13,8 @@
   \end{tabular}
   \caption{\textbf{Balanced models.}
     We show most factual models according to their efficiency, where:
-    \textbf{QMA}\textsubscript{d} (\textbf{QMA}\textsubscript{dl}) are Question Match Accuracy for the diacritics (diacriticless) model.
-    \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Question Match Accuracy for the diacritics (diacriticless) model.
+    \textbf{QMA}\textsubscript{d} (\textbf{QMA}\textsubscript{dl}) are Question Matching Accuracy for the diacritics (diacriticless) model.
+    \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Answer Matching Accuracy for the diacritics (diacriticless) model.
     \textbf{\#params} is total number of parameters.}
   \label{tab:balanced}
 \end{table}
