--- a/presentation.tex
+++ b/presentation.tex
@@ -94,11 +94,19 @@
 % Motivation
 \begin{frame}
   \frametitle{Motivation}
-  \begin{itemize}
-    \item There are chatbots, that uses RAG algorithm for QA.
-    \item Quality of answer depends of provided context from technical documents.
-    \item Quality of context depends of text representation method.
-  \end{itemize}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \begin{itemize}
+        \item LLM chatbots integrate external documents, enhancing context-aware responses.        
+        \item Answer quality depends on technical document context.        
+        \item Context quality depends on text representation.        
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[scale=0.15]{src/fig/imgs/RAG_example.png}
+    \end{column}
+  \end{columns}
+  
   
   
 \end{frame}
