Add question slide

--- a/presentation.tex
+++ b/presentation.tex
@@ -259,6 +259,24 @@
   \textcolor{cvut_navy}{\textbf{Thank you for your attention!}}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Questions}
+  Opponent: Ing. Luboš Král, Ph.D.
+
+  \textcolor{cvut_navy}{\textbf{Question 1.}} What is the main use of RAG systems?
+  \begin{itemize}
+    \item Improved accuracy and up-to-date information from external sources for question answering.
+    \item Content creation and summarization.
+    \item Documents analysis.
+  \end{itemize}
+  \textcolor{cvut_navy}{\textbf{Question 2.}} By how much does the accuracy of RAG systems for Czech fall short of English?
+  % \begin{itemize}
+    % \item There is not the exact answer for Czech language
+    % \item ~8\%-12\% difference between RAG systems in English and Polish (relative to Czech gramatics and language structure).
+    % \item Polish has 5x more native speakers, so 
+  % \end{itemize}
+\end{frame}
+
 \end{document}
 % =============================================================
 % =========================== END =============================
