presentation: Change balanced.pdf caption

--- a/presentation.tex
+++ b/presentation.tex
@@ -235,10 +235,7 @@
   \begin{table}
     \centering
     \includegraphics[scale=0.8]{src/fig/pdfs/tables/balanced.pdf}
-    \caption{\textcolor{cvut_navy}{\textbf{Balanced models.}}
-    Where QMA\textsubscript{d} (QMA\textsubscript{dl}) are Question Matching Accuracy for the diacritics (diacriticless) model.
-    AMA\textsubscript{d} (AMA\textsubscript{d}) are Answer Matching Accuracy for the diacritics (diacriticless) model.
-    \#params is total number of parameters.}
+    \caption{Balanced models compared to baseline.}
   \end{table}
 \end{frame}
 
