--- a/presentation.tex
+++ b/presentation.tex
@@ -140,7 +140,7 @@
 % Work objectives
 \begin{frame}
   \frametitle{Work objectives}
-  \textcolor{cvut_navy}{\textbf{Task 1.}} Compare text representation for QA
+  \textcolor{cvut_navy}{\textbf{Task 1.}} Review and compare text representation methods.
   \begin{itemize}
     \item Review text representation methods.
     \item Compare traditional and transformer-based methods.
@@ -252,10 +252,10 @@
     \begin{column}{0.75\textwidth}
       \vspace{10px}
       \textcolor{cvut_navy}{\textbf{Factors}}
-      \begin{enumerate}
+      \begin{itemize}
         \item Embedding \\model
         \item Chunk size
-      \end{enumerate}
+      \end{itemize}
     \end{column}
   \end{columns}
 \end{frame}
@@ -286,9 +286,10 @@
   \frametitle{Summary}
   \textcolor{cvut_navy}{\textbf{Summary}}
   \begin{itemize}
-    \item Best models: SimCSE-RetroMAE-Small, GTE\textsubscript{Small}, all mE5 verions.
-    \item Best model overall: mE5\textsubscript{Large}.
-    \item Best chunk size: 4096 symbols.
+    \item Transformer models has better performance, that tractional embedding models.
+    \item Best embedding models: SimCSE-RetroMAE-Small, GTE\textsubscript{Small}, all mE5 verions.
+    \item Best embedding model overall: mE5\textsubscript{Large}.
+    \item Best chunk size for RAG: 4096 symbols.
   \end{itemize}
   \vspace{10px}
   \begin{center}
