Add answers to the Questions slide

--- a/presentation.tex
+++ b/presentation.tex
@@ -308,23 +308,22 @@
   \textcolor{cvut_navy}{\textbf{Opponent}}: Ing. Luboš Král, Ph.D.
 
   \vspace{20px}
-
-  \textcolor{cvut_navy}{\textbf{Question 1.}} What is the main use of RAG systems?
+  
+  \textcolor{cvut_navy}{\textbf{Question 1.}} What is the main use for RAG systems?
   \begin{itemize}
     \item Improved accuracy and up-to-date information from external sources for question answering.
     \item Content creation and summarization.
     \item Documents analysis.
   \end{itemize}
-  \textcolor{cvut_navy}{\textbf{Question 2.}} By how much does the accuracy of RAG systems for Czech fall short of English?
-  % \begin{itemize}
-    % \item There is not the exact answer for Czech language
-    % \item ~8\%-12\% difference between RAG systems in English and Polish (relative to Czech gramatics and language structure).
-    % \item Polish has 5x more native speakers, so 
-  % \end{itemize}
+  \textcolor{cvut_navy}{\textbf{Question 2.}} By how much is the accuracy of RAG systems lower for Czech than for English?  
+  \begin{itemize}
+    \item Accuracy can be 15-20\% lower\footnote{Based on analysis of multilingual models performance from MTEB, \url{https://huggingface.co/spaces/mteb/leaderboard}.}.
+    \item Lack of training data.
+    \item Focus on English language for research community.
+  \end{itemize}
 \end{frame}
 
 \end{document}
 % =============================================================
 % =========================== END =============================
 % =============================================================
-
