--- a/presentation.tex
+++ b/presentation.tex
@@ -286,7 +286,7 @@
   \frametitle{Summary}
   \textcolor{cvut_navy}{\textbf{Summary}}
   \begin{itemize}
-    \item Transformer models has better performance, that tractional embedding models.
+    \item Transformer models have better performance than traditional embedding models.    
     \item Best embedding models: SimCSE-RetroMAE-Small, GTE\textsubscript{Small}, all mE5 verions.
     \item Best embedding model overall: mE5\textsubscript{Large}.
     \item Best chunk size for RAG: 4096 symbols.
@@ -311,15 +311,14 @@
   
   \textcolor{cvut_navy}{\textbf{Question 1.}} What is the main use for RAG systems?
   \begin{itemize}
-    \item Improved accuracy and up-to-date information from external sources for question answering.
-    \item Content creation and summarization.
-    \item Documents analysis.
+    \item Improved accuracy for question answering.
+    \item Up-to-date information from external sources for question answering.
   \end{itemize}
   \textcolor{cvut_navy}{\textbf{Question 2.}} By how much is the accuracy of RAG systems lower for Czech than for English?  
   \begin{itemize}
     \item Accuracy can be 15-20\% lower\footnote{Based on analysis of multilingual models performance from MTEB, \url{https://huggingface.co/spaces/mteb/leaderboard}.}.
-    \item Lack of training data.
     \item Focus on English language for research community.
+    \item Lack of training data.
   \end{itemize}
 \end{frame}
 
